[gd_scene format=3 uid="uid://dinh7e08nxmrc"]

[ext_resource type="Script" uid="uid://dqnu0nddbxutv" path="res://addons/TileMapLayer3D/core/editor_ui/tile_main_toolbar.gd" id="1_wg4s3"]

[sub_resource type="ButtonGroup" id="ButtonGroup_wg4s3"]

[sub_resource type="DPITexture" id="DPITexture_wg4s3"]
_source = "<svg xmlns=\"http://www.w3.org/2000/svg\" width=\"16\" height=\"16\"><path fill=\"#e0e0e0\" d=\"m7 1v4h2v-4zm-6 6v2h4v-2zm10 0v.61328l3.3711 1.3867h.62891v-2h-4zm-3 1 3.291 8 .94726-2.8203 1.8828 1.8828.94336-.94141-1.8848-1.8828 2.8203-.94726-8-3.291zm-1 3v4h2v-.625l-1.3887-3.375h-.61133z\"/></svg>
"
saturation = 2.0
color_map = {
Color(1, 0.37254903, 0.37254903, 1): Color(1, 0.47, 0.42, 1),
Color(0.37254903, 1, 0.5921569, 1): Color(0.45, 0.95, 0.5, 1),
Color(1, 0.8666667, 0.39607844, 1): Color(0.83, 0.78, 0.62, 1)
}

[node name="TileMapLayer3DTopBar" type="VBoxContainer" unique_id=846378447]
offset_right = 46.0
offset_bottom = 51.0
size_flags_horizontal = 0
size_flags_vertical = 0
script = ExtResource("1_wg4s3")

[node name="Label" type="Label" parent="." unique_id=14189899]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Tiling:"

[node name="EnableTilingCheckBtn" type="CheckButton" parent="." unique_id=1293144657]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
tooltip_text = "Toggle 2.5D tile placement tool (select a TileMapLayer3D node first)"

[node name="HSeparator" type="HSeparator" parent="." unique_id=481760889]
layout_mode = 2

[node name="ManualTileButton" type="Button" parent="." unique_id=1715395185]
layout_mode = 2
tooltip_text = "Switch to manual tile placement mode"
toggle_mode = true
button_group = SubResource("ButtonGroup_wg4s3")
text = "MANUAL"

[node name="AutoTileButton" type="Button" parent="." unique_id=1171952374]
layout_mode = 2
tooltip_text = "Switch to auto tile placement mode"
toggle_mode = true
button_group = SubResource("ButtonGroup_wg4s3")
text = "AUTO"

[node name="SmartSelectButton" type="Button" parent="." unique_id=1388577821]
custom_minimum_size = Vector2(36, 0)
layout_mode = 2
size_flags_horizontal = 4
tooltip_text = "Switch to auto tile placement mode"
theme_override_font_sizes/font_size = 10
toggle_mode = true
button_group = SubResource("ButtonGroup_wg4s3")
icon = SubResource("DPITexture_wg4s3")

[node name="SettingsButton" type="Button" parent="." unique_id=112521672]
layout_mode = 2
tooltip_text = "Switch to settings tab"
toggle_mode = true
button_group = SubResource("ButtonGroup_wg4s3")
text = "SETT"

[node name="HSeparator2" type="HSeparator" parent="." unique_id=1546068006]
layout_mode = 2
